# spctr

./: Cargo.toml  ROADMAP.md  fib.pl  fiz.pl  hoge.spc  renovate.json
.cargo/: config.toml
benches/: interp.rs
examples/: fib.spc  fizzbuzz.spc  iterator.spc  math.spc  middle.spc  use_math.spc  util.spc
src/: array.rs  ast.rs  diag.rs  eval.rs  grammar.pest  http.spc  interp.rs  iterator.spc  jit.rs  json.rs  lexer.rs  lib.rs  list.rs  main.rs  map.rs  parser.rs  resolver.rs  stack.rs  string.rs  symbol.rs  token.rs  translator.rs  typeck.rs  types.rs  vm.rs
src/lib/: iterator.spc  list.rs  string.rs
src/stdlib/: imports.rs  list.rs  mod.rs  number.rs  string.rs
tests/: jit.rs  snapshots.rs
