[package]
name = "spctr"
version = "0.1.0"
authors = ["Satoshi Amemiya <satoshi_amemiya@voyagegroup.com>"]
edition = "2021"

[dependencies]
clap = "2.33"
chumsky = "0.10"
logos = "0.15"
anyhow = "1"
ariadne = "0.5"
lasso = { version = "0.7", features = ["multi-threaded"] }
rustyline = "18"
cranelift-codegen = "0.131"
cranelift-frontend = "0.131"
cranelift-jit = "0.131"
cranelift-module = "0.131"
cranelift-native = "0.131"

[dev-dependencies]
criterion = "0.7"
insta = "1"

[[bench]]
name = "interp"
harness = false
